[package]
name = "tsql-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sqlformat = "^0"
# reqwest = { version = "^0", default-features = false, features = ["json", "rustls-tls"] }